# Single_Page_Application

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
logistics_company/: apps.py  models.py  tests.py  urls.py  views.py
logistics_company/fixtures/: data.json
logistics_company/migrations/: 0001_initial.py
logistics_company/templates/logistics_company/: main.html
logistics_company/templatetags/: tag_date_time.py
